Archive2/1a/240e720c995be3/output
main.cpp: In function 'int main()':
main.cpp:7:19: error: no match for 'operator>>' (operand types are 'std::basic_ostream<char>' and 'int')
     DebugPrint(16 >> 1)   
                   ^
main.cpp:4:36: note: in definition of macro 'DebugPrint'
 #define DebugPrint( data ) cout << data << endl;
                                    ^
main.cpp:7:19: note: candidates are:
     DebugPrint(16 >> 1)   
                   ^
main.cpp:4:36: note: in definition of macro 'DebugPrint'
 #define DebugPrint( data ) cout << data << endl;
                                    ^
In file included from /usr/local/include/c++/4.9.0/string:53:0,
                 from /usr/local/include/c++/4.9.0/bits/locale_classes.h:40,
                 from /usr/local/include/c++/4.9.0/bits/ios_base.h:41,
                 from /usr/local/include/c++/4.9.0/ios:42,
                 from /usr/local/include/c++/4.9.0/ostream:38,
                 from /usr/local/include/c++/4.9.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/basic_string.tcc:996:5: note: template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, std::basic_string<_CharT, _Traits, _Alloc>&)
     operator>>(basic_istream<_CharT, _Traits>& __in,
     ^
/usr/local/include/c++/4.9.0/bits/basic_string.tcc:996:5: note:   template argument deduction/substitution failed:
main.cpp:7:22: note:   'std::basic_ostream<char>' is not derived from 'std::basic_istream<_CharT, _Traits>'
     DebugPrint(16 >> 1)   
                      ^
main.cpp:4:36: note: in definition of macro 'DebugPrint'
 #define DebugPrint( data ) cout << data << endl;
                                    ^
In file included from /usr/local/include/c++/4.9.0/istream:879:0,
                 from /usr/local/include/c++/4.9.0/iostream:40,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/istream.tcc:955:5: note: template<class _CharT2, class _Traits2> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, _CharT2*)
     operator>>(basic_istream<_CharT, _Traits>& __in, _CharT* __s)
     ^
/usr/local/include/c++/4.9.0/bits/istream.tcc:955:5: note:   template argument deduction/substitution failed:
main.cpp:7:22: note:   'std::basic_ostream<char>' is not derived from 'std::basic_istream<_CharT, _Traits>'
     DebugPrint(16 >> 1)   
                      ^
main.cpp:4:36: note: in definition of macro 'DebugPrint'
 #define DebugPrint( data ) cout << data << endl;
                                    ^
In file included from /usr/local/include/c++/4.9.0/istream:879:0,
                 from /usr/local/include/c++/4.9.0/iostream:40,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/istream.tcc:923:5: note: template<class _CharT, class _Traits> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, _CharT&)
     operator>>(basic_istream<_CharT, _Traits>& __in, _CharT& __c)
     ^
/usr/local/include/c++/4.9.0/bits/istream.tcc:923:5: note:   template argument deduction/substitution failed:
main.cpp:7:22: note:   'std::basic_ostream<char>' is not derived from 'std::basic_istream<_CharT, _Traits>'
     DebugPrint(16 >> 1)   
                      ^
main.cpp:4:36: note: in definition of macro 'DebugPrint'
 #define DebugPrint( data ) cout << data << endl;
                                    ^
In file included from /usr/local/include/c++/4.9.0/iostream:40:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/istream:727:5: note: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, unsigned char&)
     operator>>(basic_istream<char, _Traits>& __in, unsigned char& __c)
     ^
/usr/local/include/c++/4.9.0/istream:727:5: note:   template argument deduction/substitution failed:
main.cpp:7:22: note:   'std::basic_ostream<char>' is not derived from 'std::basic_istream<char, _Traits>'
     DebugPrint(16 >> 1)   
                      ^
main.cpp:4:36: note: in definition of macro 'DebugPrint'
 #define DebugPrint( data ) cout << data << endl;
                                    ^
In file included from /usr/local/include/c++/4.9.0/iostream:40:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/istream:732:5: note: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, signed char&)
     operator>>(basic_istream<char, _Traits>& __in, signed char& __c)
     ^
/usr/local/include/c++/4.9.0/istream:732:5: note:   template argument deduction/substitution failed:
main.cpp:7:22: note:   'std::basic_ostream<char>' is not derived from 'std::basic_istream<char, _Traits>'
     DebugPrint(16 >> 1)   
                      ^
main.cpp:4:36: note: in definition of macro 'DebugPrint'
 #define DebugPrint( data ) cout << data << endl;
                                    ^
In file included from /usr/local/include/c++/4.9.0/iostream:40:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/istream:774:5: note: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, unsigned char*)
     operator>>(basic_istream<char, _Traits>& __in, unsigned char* __s)
     ^
/usr/local/include/c++/4.9.0/istream:774:5: note:   template argument deduction/substitution failed:
main.cpp:7:22: note:   'std::basic_ostream<char>' is not derived from 'std::basic_istream<char, _Traits>'
     DebugPrint(16 >> 1)   
                      ^
main.cpp:4:36: note: in definition of macro 'DebugPrint'
 #define DebugPrint( data ) cout << data << endl;
                                    ^
In file included from /usr/local/include/c++/4.9.0/iostream:40:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/istream:779:5: note: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, signed char*)
     operator>>(basic_istream<char, _Traits>& __in, signed char* __s)
     ^
/usr/local/include/c++/4.9.0/istream:779:5: note:   template argument deduction/substitution failed:
main.cpp:7:22: note:   'std::basic_ostream<char>' is not derived from 'std::basic_istream<char, _Traits>'
     DebugPrint(16 >> 1)   
                      ^
main.cpp:4:36: note: in definition of macro 'DebugPrint'
 #define DebugPrint( data ) cout << data << endl;
                                    ^
In file included from /usr/local/include/c++/4.9.0/iostream:40:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/istream:872:5: note: template<class _CharT, class _Traits, class _Tp> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&&, _Tp&)
     operator>>(basic_istream<_CharT, _Traits>&& __is, _Tp& __x)
     ^
/usr/local/include/c++/4.9.0/istream:872:5: note:   template argument deduction/substitution failed:
main.cpp:7:22: note:   'std::basic_ostream<char>' is not derived from 'std::basic_istream<_CharT, _Traits>'
     DebugPrint(16 >> 1)   
                      ^
main.cpp:4:36: note: in definition of macro 'DebugPrint'
 #define DebugPrint( data ) cout << data << endl;
                                    ^
